--- a/libs/database/package.json
+++ b/libs/database/package.json
@@ -5,13 +5,22 @@
   "main": "./index.ts",
   "scripts": {
     "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev"
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "db:push": "prisma db push",
+    "db:seed": "tsx examples/seed.ts",
+    "db:query": "tsx examples/queries.ts",
+    "db:reset": "prisma db push --force-reset && pnpm run db:seed"
   },
   "packageManager": "pnpm@10.22.0",
   "dependencies": {
-    "@prisma/client": "latest"
+    "@prisma/client": "^7.2.0",
+    "@prisma/adapter-pg": "^7.2.0",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
+    "tsx": "^4.19.0",
+    "typescript": "^5.3.3",
     "@types/node": "^25.0.3",
     "dotenv": "^17.2.3",
     "prisma": "^7.2.0"
